# learn_cmake

./: .gitignore
step1/: CMakeLists.txt
step2/: CMakeLists.txt
step3/: CMakeLists.txt  hello.cpp  hello.hpp  main.cpp
step4/: CMakeLists.txt
step4/hello-exe/: CMakeLists.txt  main.cpp
step4/say-hello/: CMakeLists.txt
